<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_reunion">

    <EditText
        android:id="@+id/subject_editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="Sujet de la réunion"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/subject_editText"
        android:id="@+id/textLayout">

    <TextView
        android:id="@+id/txtView_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject_editText"
        android:text="Heure"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="2"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/txtView_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject_editText"
        android:text="Date"
        android:layout_weight="2"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/txtView_time"/>


    </LinearLayout>


    <Spinner
        android:id="@+id/place_Spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/textLayout"
        android:spinnerMode="dropdown"/>

    <EditText
        android:id="@+id/participant_editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/place_Spinner"
        android:layout_below="@id/place_Spinner"
        android:hint="Participants"/>


</android.support.constraint.ConstraintLayout>