<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reunion.ReunionListActivity">

    <include
        android:id="@+id/toolbarlayout"
        layout="@layout/toobar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reunion_list_recyclerview"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        tools:listitem="@layout/list_reunion_items"></android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_reunion_fab"
        android:layout_width="65dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="35dp"
        app:fabCustomSize="65dp"
        android:backgroundTint="#FFFF4955"
        android:src="@drawable/ic_add_white_24dp"
        app:maxImageSize="40dp"/>

</android.support.constraint.ConstraintLayout>