...
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reunion_info_textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="50dp"
        android:textStyle="bold"
        android:textSize="18sp"
...
        android:layout_marginStart="75dp"
        android:layout_marginEnd="50dp"
        android:textSize="12dp"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@+id/reunion_list_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reunion_list_delete_button"/>

    <ImageButton
        android:id="@+id/reunion_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
...
